[package]
name = "actio"
version = "0.1.0"
description = "Framework for long-running async actions: feedback stream, cancellation, and terminal result. Implementation details in the upcoming release."
license = "MIT/Apache-2.0"
edition = "2024"


[dependencies]
futures = "0.3.31"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["sync", "time", "macros"] }
tracing = "0.1.44"

[dev-dependencies]
mockall = "0.14.0"
anyhow = "1.0.100"
tokio = { version = "1.49.0", features = [
    "sync",
    "time",
    "macros",
    "test-util",
] }
